fixed missing overflow hidden

--- a/src/components/m-main-navigation-mobile/index.scss
+++ b/src/components/m-main-navigation-mobile/index.scss
@@ -12,6 +12,7 @@
   position: relative;
 
   display: block;
+  overflow: hidden;
 
   background: $main-navigation-mobile-bg;
 }
